.kube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-store
  labels:
    app.kubernetes.io/name: home-store
