.kube/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: home-store
  labels:
    app: home-store-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: home-store-api
  template:
    metadata:
      labels:
        app: home-store-api
    spec:
      containers:
        - name: api
          image: home-store-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: php-fpm
              protocol: TCP
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 15
            periodSeconds: 10
