.kube/www-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-deployment
  namespace: home-store
  labels:
    app: home-store-www
spec:
  replicas: 2
  selector:
    matchLabels:
      app: home-store-www
  template:
    metadata:
      labels:
        app: home-store-www
    spec:
      containers:
        - name: www
          image: home-store-www:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
