.kube/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: home-store
  labels:
    app: home-store-api
spec:
  selector:
    app: home-store-api
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: php-fpm
      port: 9000
      targetPort: 9000
      protocol: TCP
  type: ClusterIP
