.kube/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: home-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:19beta3
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql
            - name: hunspell-aff
              mountPath: /usr/share/postgresql/19/tsearch_data/ru_ru.affix
            - name: hunspell-dic
              mountPath: /usr/share/postgresql/19/tsearch_data/ru_ru.dict
            - name: postgres-init
              mountPath: /docker-entrypoint-initdb.d/001-init.sql
              subPath: init.sql
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
        - name: hunspell-aff
          hostPath:
            path: /data/home-store/tsearch_data/ru_ru.affix
            type: File
        - name: hunspell-dic
          hostPath:
            path: /data/home-store/tsearch_data/ru_ru.dict
            type: File
        - name: postgres-init
          configMap:
            name: postgres-init
---
apiVersion: v1
kind: Service
metadata:
  name: home-store-postgres
  namespace: home-store
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
