.kube/www-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: www-service
  namespace: home-store
  labels:
    app: home-store-www
spec:
  selector:
    app: home-store-www
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
