.kube/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-store
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: home-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql
            - name: hunspell-aff
              mountPath: /usr/share/postgresql/16/tsearch_data/ru_ru.affix
              subPath: ru_ru.affix
            - name: hunspell-dic
              mountPath: /usr/share/postgresql/16/tsearch_data/ru_ru.dict
              subPath: ru_ru.dict
            - name: postgres-init
              mountPath: /docker-entrypoint-initdb.d/001-init.sql
              subPath: init.sql
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
        - name: hunspell-aff
          hostPath:
            path: /data/home-store/tsearch_data/ru_ru.affix
            type: File
        - name: hunspell-dic
          hostPath:
            path: /data/home-store/tsearch_data/ru_ru.dict
            type: File
        - name: postgres-init
          configMap:
            name: postgres-init
---
apiVersion: v1
kind: Service
metadata:
  name: home-store-postgres
  namespace: home-store
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: home-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: api
          image: registry.cubicat.ru/home-store/home-store-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: home-store
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www
  namespace: home-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: www
  template:
    metadata:
      labels:
        app: www
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: www
          image: registry.cubicat.ru/home-store/home-store-www:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: www-service
  namespace: home-store
spec:
  type: NodePort
  selector:
    app: www
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-store-ingress
  namespace: home-store
spec:
  rules:
    - host: store.dev11.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: www-service
                port:
                  number: 80
