.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-store-ingress
  namespace: home-store
  annotations:
    # Default annotations for most ingress controllers
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    # Замените home-store.local на ваш домен
    - host: home-store.local
      http:
        paths:
          # Маршрут для API
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
          # Маршрут для www (Nuxt)
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: www-service
                port:
                  number: 80
